# make_the_hero_easy_type

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
bevy/: Cargo.toml  index.html
bevy/src/: action.rs  arrow.rs  consts.rs  main.rs  plugin.rs
bevy/src/action/: cell_select.rs  cleanup.rs  move_cell.rs  play_answer.rs  setup_cells.rs  stage_clear.rs
bevy/src/plugin/: move_cell.rs  secret.rs  stage.rs  stage_clear.rs  stage_ui.rs
puzzle_core/: Cargo.toml
puzzle_core/src/: answer.rs  calculator.rs  lib.rs  movable_ratio.rs  move_dir.rs  ratio.rs  stage.rs
puzzle_core/src/answer/: steps.rs
puzzle_core/src/calculator/: small_size.rs
